--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./server.js localhost 3081"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,6 +14,13 @@
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "morgan": "~1.9.1",
-    "puppeteer": "^19.7.5"
+    "puppeteer": "^19.7.5",
+    "dotenv": "^8.2.0",
+    "pg": "^8.10.0",
+    "pine": "^1.1.1",
+    "sequelize": "^6.30.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
