--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www localhost 3081",
     "dev": "nodemon ./server.js localhost 3081"
   },
   "dependencies": {
