--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "dev": "nodemon ./server.js localhost 3081"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
+    "jade": "^0.31.2",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
-    "puppeteer": "^19.7.5",
-    "dotenv": "^8.2.0",
     "pg": "^8.10.0",
     "pine": "^1.1.1",
+    "puppeteer": "^19.7.5",
     "sequelize": "^6.30.0"
   },
   "devDependencies": {
